# img-aligner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
demo/exposure-bracket-batch-processing/: README.md  align-bracket.py  exposure-fusion.blend
demo/images/: 3-3d-scene-a.exr  3-3d-scene-b.exr
docs/v0.1.0-alpha/: tutorial.md
licenses/: bzip2.txt  img-aligner.txt
resources/: icon.blend  icon.blend1  icon.icns
shaders/: cost_pass_frag.glsl  difference_pass_frag.glsl  frag.glsl  fullscreen_quad_vert.glsl  grid_warp_pass_frag.glsl  grid_warp_pass_vert.glsl  ui_pass_frag.glsl  vert.glsl
src/: app.cpp  app.hpp  common.cpp  common.hpp  grid_warp.cpp  grid_warp.hpp  main.cpp  params.hpp  transform2d.cpp  ui_pass.cpp  ui_pass.hpp
src/lib/beva/: beva.cpp  beva.hpp
src/lib/imgui/misc/freetype/: imgui_freetype.cpp  imgui_freetype.h
src/lib/stb/: stb_image.h
src/misc/: app_state.cpp  app_state.hpp  circular_buffer.hpp  common.hpp  constants.hpp  hash.hpp  io.cpp  io.hpp  numbers.cpp  numbers.hpp  time.cpp  time.hpp  transform2d.hpp  vk_utils.cpp  vk_utils.hpp
